DCH 03-Nov-2008
    Added code to XS for PDL::Graphics::PLplot::plParseOpts to 
    avoid a segfault when it is called with no options.  Also added
    test case to plplot.t.
DCH 03-Nov-2008
    Took out MY::test subroutine in top-level Makefile.PL.
    This should restore the complete 'make test' functionality
    which now works properly after Craig Deforest's fix of 
    28-Oct-2008.
CHM 01-Nov-2008
    perldl.conf: changed default build options to enable bad
    value support and updated the Release_Notes to advertise
    the new capability.
    Basic/PDL.pm: updated VERSION to 2.4.3_05 which will be
    the official 2.4.4 release once the final updates are
    complete.  Changes updated to reflect these changes.
CHM 01-Nov-2008
    Updated Known_Problems and Release_Notes for PDL-2.4.4
    release to come.
CHM 01-Nov-2008
    Graphics/IIS/iis.pd: fixes from patch #1908629 to quiet
    some gcc udefined operations warnings.
CHM 01-Nov-2008
    t/ufunc.t: fixed typo in conversion from is() to ok()
CHM 01-Nov-2008
    Basic/Core/pdlcore.c.PL: added case to support creation of
    longlong piddles with pdl_from_array from patch #2107905
    on the SF PDL site.  Thanks to Pete Ratzlaff.
CHM 01-Nov-2008
    Added dragonfly OS to list of BSD flavors requiring the
    -s flag to uudecode in IO/Dumper.pm.
CHM 31-Oct-2008
    Modified t/ufunc.t to use ok() and approximate numerical
    equality rather than string eq via is() for the tests.
DAL 29-Oct-2008
    Graphics/PLplot: changed Makefile.PL and plplot.pd so new 5.9.0
    (devel release) funcs aren't linked if older PLplot is installed.
SIS 29-Oct-2008
    Added a "sub MY::postamble{return ''}" to IO/Dicom/Makefile.PL
    to prevent the writing of a postamble section which was sometimes
    happening (with dmake only).
CED 28-Oct-2008
    Removed "Gen/pm_to_blib" dependence in Dev.pm - this should fix the 
    Makefile repeated-compile woes.  Added some explanatory notes in other
    Makefile.PL's.
CED 27-Oct-2008