@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                PDL
-version:             2.4.3_05
+version:             2.4.3_06
 abstract:            Perl Data Language
 license:             ~
 author:              
